Attempt to address #26 * Increased size of "Add attacker" button to try to prevent it from wrapping wrong on mobile * Changed queries with single attacker to ignore the "Limit only top moveset" setting

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -47,7 +47,7 @@
 }
 
 .search-input-add-button {
-  width: 200px;
+  width: 224px;
 }
 
 .results-container {
